# Pantra

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260428_0831_b005659e4bbf_initial.py  20260429_1918_5f2182a6daaa_dental_catalog_practitioner_schedules.py  20260429_2103_b3e163b5582b_restaurant_tables.py  20260430_1235_c77e47914ea3_drop_restaurant_tables_and_table_id.py  20260430_1312_8a72e4883e02_knowledge_entries_service_long_form_.py  20260511_2210_c9d4a7e1b8f3_ai_run_cache_tokens.py
docs/: ARCHITECTURE.md  AVV_LAWYER_BRIEF.md  BUSINESS_PLAN_6M.md  LANDING_SPEC.md  LEAD_SCOUT_SESSION_HANDOFF.md  OUTREACH_COPY.md  PROJECT_SPEC.md
docs/decisions/: 0001-mvp-scope.md
docs/design/duna/: DESIGN-DARK.md  DESIGN.md  preview-dark.html  preview.html
scripts/: cleanup_non_dental_demos.py  seed_demos.py  seed_dental_clinic.py  seed_dental_knowledge.py
src/pantra/: __init__.py  config.py  db.py  logging.py  main.py
src/pantra/api/: __init__.py
src/pantra/audio/: __init__.py  storage.py  synthesizer.py  transcriber.py
src/pantra/channels/: __init__.py
src/pantra/evals/: __init__.py  runner.py
src/pantra/handoff/: __init__.py  email.py  telegram.py
src/pantra/llm/: __init__.py  classifier.py  engine.py  fast_reply.py  router.py
src/pantra/models/: __init__.py  ai_run.py  base.py  (+12 more)
static/demo/: chat.css  chat.js
static/landing/: fonts.css  style.css
templates/admin/: dashboard.html.j2
templates/demo/: chat.html  landing.html
templates/landing/: _base.html.j2  einzelpraxis.html.j2  pricing.html.j2
templates/legal/: agb.html.j2  datenschutz.html.j2  impressum.html.j2
tests/: conftest.py  test_classifier_parse.py  test_cost.py  test_pii.py  test_templates_registry.py  test_usage.py  test_whatsapp_window.py
(+48 files in other folders)
